Fixed bug #47320 ($php_errormsg out of scope in functions)